# fpvsetup

./: .gitignore  Cargo.toml  README.md  README.tpl  build.rs
.github/workflows/: checks_and_tests.yml
src/: aspect.rs  lib.rs
src/gui/: focused.rs  layout.rs  main.rs  monitor_properties.rs  output_tabs.rs  portal_like.rs  unit_setup.rs  util.rs
src/gui/monitors/: mod.rs  windows.rs
