[package]
name = "fpvsetup"
version = "0.1.0"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kotauskas/fpvsetup"
documentation = "https://docs.rs/fpvsetup"

description = "Library and GUI tool for calculating optimal first-person 3D view parameters from monitor size and distance"

categories = ["game-development", "mathematics"]

autobins = false

[[bin]]
name = "fpvsetup"
path = "src/gui/main.rs"
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["fltk", "native-dialog"]

[dependencies]
fltk = { version = "0.16", features = ["fltk-bundled"], optional = true }
native-dialog = { version = "0.5", optional = true }
uom = "0.31"
